# ms

./: .travis.yml  CHANGELOG.md  LICENSE  Math-MetricSpace.html  README.md  doc-index.html  index-frames.html  index.html  mini_Math-MetricSpace.html  ms.cabal  ms.haddock  ms.txt
scripts/: deploy-haddock-manually.sh
src/: Math-MetricSpace.html
src/Math/: MetricSpace.hs
tests/: doctests.hs  test.hs
