name:                ms
version:             0.1.0.0
synopsis:            metric spaces
-- description:
homepage:            https://github.com/relrod/ms
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Math.MetricSpace
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , edit-distance >= 0.2 && < 0.3
                     , vector >= 0.10 && < 0.12
  hs-source-dirs:      src
  default-language:    Haskell2010