name:                ms
version:             0.1.0.0
synopsis:            metric spaces
-- description:
homepage:            https://github.com/relrod/ms
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Math.MetricSpace
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , contravariant >= 1 && < 2
                     , edit-distance >= 0.2 && < 0.3
                     , lens >= 4 && < 5
                     , profunctors >= 5 && < 6
                     , semigroups >= 0.12 && < 0.17
                     , vector >= 0.10 && < 0.12
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:       base >= 4 && < 5
                     , tasty >= 0.10
                     , tasty-quickcheck >= 0.8
                     , ms
                     , profunctors >= 5 && < 6
                     , vector >= 0.10 && < 0.12
  ghc-options:         -threaded
                       -O2
                       "-with-rtsopts=-N"

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:        -threaded
  hs-source-dirs:      tests
  main-is:             doctests.hs
  build-depends:       base >= 4 && < 5
                     , doctest >= 0.8
